# koji

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  koji.yaml  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  wrangler.jsonc
.github/baselines/: bench.json
.github/workflows/: bench.yml  ci.yml  deploy.yml  e2e.yml  publish-images.yml  release.yml
api/: package.json  tsconfig.json
api/src/: app.ts  bootstrap.ts  context.ts  email-templates.ts  email.ts  env.ts  index.ts  rate-limit.test.ts  rate-limit.ts  seed.ts
api/src/auth/: adapter.ts  local.ts  middleware.test.ts  middleware.ts  password.ts  roles.test.ts  roles.ts
api/src/billing/: adapter.ts  concurrency.test.ts  concurrency.ts  errors.ts  middleware.test.ts  middleware.ts  noop.test.ts  noop.ts  plans.test.ts  plans.ts  rate-limits.test.ts  (+1 more)
cli/: bench.py  cluster.py  compose.py  config.py  credentials.py  doctor.py  extract.py  init.py  logs.py  main.py  process.py  serve.py  test_credentials.py  test_runner.py
dashboard/: CLAUDE.md  next.config.ts  package.json  playwright.config.ts  vitest.config.ts  wrangler.jsonc
dashboard/e2e/: global-setup.ts  helpers.ts  jobs.spec.ts  navigation.spec.ts  pipelines.spec.ts  review.spec.ts  schemas.spec.ts  settings.spec.ts  smoke.spec.ts  sources.spec.ts  trace.spec.ts
dashboard/src/: middleware.ts  proxy.ts
docker/: api.Dockerfile  dashboard.Dockerfile  extract.Dockerfile  parse.Dockerfile  parse.base.Dockerfile  server.Dockerfile  ui.Dockerfile
docker/db-init/: 01_app_user.sql
docs/: api-reference.md  architecture.md  cli.md  configuration.md  forms-guide.md  getting-started.md  index.md  integration.md  llms-full.txt  llms.txt  schema-guide.md  schemas.md  trace-format.md
docs/deployments/: anthropic.md  azure.md  bedrock.md  index.md  on-prem.md  openai.md
docs/design/: classify-split.md
schemas/examples/: insurance_policy.yaml  invoice.yaml
scripts/: build-llms-full.py  generate-brand-assets.sh  mkdocs-hooks.py  seed-benchmark-data.ts
sdk/: __init__.py  client.py
server/: config.py  db.py  jobs.py  main.py  schemas.py  webhooks.py
services/: integrity.py
services/extract/: classify.py  document_map.py  main.py  normalize.py  packet_splitter.py  parallel.py  pipeline.py  providers.py  router.py  section_map.py  tools.py  validate.py  vision.py
services/extract-modal/: app.py
services/parse/: main.py
services/parse-modal/: README.md  app.py  test_parallel.py
tests/: conftest.py  test_classify.py  test_cli.py  test_cli_bench.py  test_cli_doctor.py  test_cli_init.py  test_cli_test.py  test_compose.py  test_config.py  test_db.py  test_document_map.py  test_extract_endpoint.py  test_integrity.py  test_normalize.py  test_packet_splitter.py  test_parse_ocr_routing.py  test_pipeline.py  test_port_check.py  test_providers.py  test_rate_limiter.py  test_router.py  test_schemas_api.py  test_sdk.py  test_section_map.py  test_serve.py  test_server.py  test_smoke.py  test_validate.py  test_webhooks.py
tests/bench/: bench_sroie.py  receipt_schema.yaml  sroie_results.json
ui/: server.py
ui/static/: index.html
(+242 files in other folders)
